--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/studentButton"
-        android:onClick="goToClassList"/>
+        android:onClick="goToStudentList"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
