--- a/app/src/main/res/layout/activity_absent.xml
+++ b/app/src/main/res/layout/activity_absent.xml
@@ -59,5 +59,6 @@
         android:text="Back to your Classes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:onClick="goToClassPage"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
