class page to absent and checkin

--- a/app/src/main/res/layout/activity_absent.xml
+++ b/app/src/main/res/layout/activity_absent.xml
@@ -60,5 +60,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:onClick="goToClassPage"/>
+        android:onClick="goToClassList"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
