--- a/app/src/main/res/layout/activity_class_list.xml
+++ b/app/src/main/res/layout/activity_class_list.xml
@@ -64,6 +64,6 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/classButton"
-        android:onClick="goToClassPage"/>
+        android:onClick="goToClassList"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
