--- a/app/src/main/res/layout/activity_class_list.xml
+++ b/app/src/main/res/layout/activity_class_list.xml
@@ -8,29 +8,30 @@
 
     <Button
         android:id="@+id/classButton"
-        android:layout_width="306dp"
-        android:layout_height="0dp"
+        android:layout_width="303dp"
+        android:layout_height="164dp"
         android:layout_marginBottom="343dp"
         android:onClick="goToClassPage"
         android:text="CS 407: TThF 1-2:15pm"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.438"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logout_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/logout_btn"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="294dp"
-        android:layout_height="85dp"
+        android:layout_height="0dp"
         android:layout_marginStart="58dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="29dp"
         android:layout_marginEnd="58dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginBottom="534dp"
         android:text="name"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/yourClassesText"
+        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,9 +48,10 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/classButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/classButton2"
@@ -62,22 +64,22 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.453"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/classButton" />
+        app:layout_constraintTop_toBottomOf="@+id/classButton"
+        app:layout_constraintVertical_bias="0.653" />
 
     <Button
         android:id="@+id/logout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="168dp"
-        android:text="Logout"
+        android:layout_marginBottom="35dp"
         android:onClick="logout"
-        app:layout_constraintBottom_toTopOf="@+id/classButton"
+        android:text="Logout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
