--- a/app/src/main/res/layout/activity_class_page1.xml
+++ b/app/src/main/res/layout/activity_class_page1.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="112dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="426dp"
-        android:text="CS407: T/TH/F 1-2:15pm"
+        android:text=""
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/coordinateText"
         app:layout_constraintEnd_toEndOf="parent"
