--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,55 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/Here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Here"
-        android:text="HERE!"
-        android:textColor="@color/red"
-        android:textSize="45dp"
-        android:textStyle="bold"
-        android:layout_margin="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
+        android:text="HERE!"
+        android:textColor="#ffff"
+        android:textSize="45dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/Signin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Here"
+        android:padding="10dp"
+        android:text="Sign In"
+        android:textColor="#B8B8B8"
+        android:textSize="30dp"
+        android:textStyle="bold"
         />
 
     <TextView
+        android:id="@+id/students"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Signin"
-        android:text="Sign in"
-        android:textColor="@color/black"
-        android:textSize="35dp"
-        android:padding="20dp"
-        android:textStyle="bold"
-        android:layout_below="@+id/Here"
+        android:layout_below="@+id/Signin"
+        android:padding="10dp"
+        android:text="Students sign in with Google:"
+        android:textColor="#B8B8B8"
+        android:textSize="20dp"
+
         />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Signin"
+        android:layout_below="@id/students"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp" />
 
-    <Button
+    <TextView
+        android:id="@+id/teachers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/sign_in_button"
+        android:padding="20dp"
+        android:text="Instructors sign in below:"
+        android:textColor="#B8B8B8"
+        android:textSize="20dp"
+
+        />
+
+    <Button
         android:id="@+id/InstructorLoginButton"
-        android:text="Instructor Login"
-        android:textSize="36dp"
-        android:gravity="center"
-        android:layout_marginTop="500dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
+        android:layout_width="190dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/teachers"
         android:onClick="goToStudentList"
+        android:text="Instructor Sign In"
+        android:textSize="18dp"
+        android:textColor="#7A7A7A"
+        android:backgroundTint="#ffff"
+        app:cornerRadius="5dp"
         />
 
 </RelativeLayout>
