even even more updates

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:layout_marginLeft="120dp"
         android:layout_marginTop="20dp"
         android:layout_below="@id/teachers"
-        android:onClick="goToStudentList"
+        android:onClick="goToInstructorLogin"
         android:text="Instructor Sign In"
         android:textSize="18dp"
         android:textColor="#7A7A7A"
