--- a/app/src/main/res/layout/activity_instructor_create_login.xml
+++ b/app/src/main/res/layout/activity_instructor_create_login.xml
@@ -6,14 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".InstructorCreateLogin">
 
+    <EditText
+        android:id="@+id/instructorLoginName"
+        android:layout_width="269dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="120dp"
+        android:ems="10"
+        android:hint="Name (ALL CAPS)"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/InstructorLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="393dp"
+        android:onClick="goToInstructorPage"
+        android:text="Login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/instructorLoginPassword"
+        android:layout_width="267dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="264dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/InstructorCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
-        android:layout_marginTop="456dp"
-        android:text="Create Account"
+        android:layout_marginTop="524dp"
         android:onClick="goToInstructorCreate"
+        android:text="Create Account"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
