even even even more updates

--- a/app/src/main/res/layout/activity_instructor_create_page.xml
+++ b/app/src/main/res/layout/activity_instructor_create_page.xml
@@ -22,8 +22,8 @@
         android:id="@+id/instructorClass"
         android:layout_width="289dp"
         android:layout_height="53dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="174dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="276dp"
         android:ems="10"
         android:hint="Class"
         android:inputType="text"
@@ -40,4 +40,16 @@
         android:text="Create"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/instructor_password"
+        android:layout_width="291dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginTop="172dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
