--- a/app/src/main/res/layout/activity_instructor_create_page.xml
+++ b/app/src/main/res/layout/activity_instructor_create_page.xml
@@ -34,8 +34,8 @@
         android:id="@+id/instructorCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginBottom="169dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginBottom="232dp"
         android:onClick="goToInstructorLoginPage"
         android:text="Create"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,12 +44,26 @@
     <EditText
         android:id="@+id/instructor_password"
         android:layout_width="291dp"
-        android:layout_height="54dp"
+        android:layout_height="0dp"
         android:layout_marginStart="63dp"
         android:layout_marginTop="172dp"
+        android:layout_marginBottom="413dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/backToClasses"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backToClasses"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="44dp"
+        android:text="Back to Login"
+        android:onClick="goToLogin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/instructor_password" />
 </androidx.constraintlayout.widget.ConstraintLayout>
