--- a/app/src/main/res/layout/activity_instructor_create_login.xml
+++ b/app/src/main/res/layout/activity_instructor_create_login.xml
@@ -8,15 +8,17 @@
 
     <EditText
         android:id="@+id/instructorLoginName"
-        android:layout_width="269dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="62dp"
         android:layout_marginTop="132dp"
-        android:layout_marginBottom="442dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="58dp"
         android:ems="10"
         android:hint="Name (ALL CAPS)"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/backtosignin"
+        app:layout_constraintBottom_toTopOf="@+id/instructorLoginPassword"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,46 +26,51 @@
         android:id="@+id/InstructorLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="372dp"
+        android:layout_marginBottom="167dp"
         android:onClick="goToInstructorPage"
         android:text="Login"
+        app:layout_constraintBottom_toTopOf="@+id/InstructorCreate"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/instructorLoginPassword" />
 
     <EditText
         android:id="@+id/instructorLoginPassword"
-        android:layout_width="267dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="248dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="38dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/InstructorLogin"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/instructorLoginName" />
 
     <Button
         android:id="@+id/InstructorCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="524dp"
+        android:layout_marginBottom="28dp"
         android:onClick="goToInstructorCreate"
         android:text="Create Account"
+        app:layout_constraintBottom_toTopOf="@+id/backtosignin"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/InstructorLogin" />
 
     <Button
         android:id="@+id/backtosignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:layout_marginBottom="51dp"
-        android:text="Back to SignIn"
         android:onClick="logout"
+        android:text="Back to SignIn"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/instructorLoginName" />
+        app:layout_constraintStart_toStartOf="@+id/InstructorCreate"
+        app:layout_constraintTop_toBottomOf="@+id/InstructorCreate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
